@@ -111,3 +111,4 @@ TTFTOOL_ENDIAN = @TTFTOOL_ENDIAN@
 WINDRES = @WINDRES@
 YACC = @YACC@
 ZIP = @ZIP@
+FLEXLEXER_PATH = @FLEXLEXER_PATH@
